feat: multi files edit must be sorted
